--- a/server/package.json
+++ b/server/package.json
@@ -9,8 +9,8 @@
   "scripts": {
     "test": "nodemon server/index.js",
     "dev:server": "nodemon server/index.js",
-    "build:server": "nodemon server/index.js",
-    "start":"node server/index.js"
+    "build:server": "node server/index.js",
+    "start": "node server/index.js"
   },
   "dependencies": {
     "axios": "^1.13.1",
