--- a/client/client-react/package.json
+++ b/client/client-react/package.json
@@ -11,6 +11,7 @@
     "build": "webpack --mode production"
   },
   "dependencies": {
+    "axios": "^1.13.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
