--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,9 @@
   },
   "dependencies": {
     "axios": "^1.13.1",
-    "express": "^5.1.0"
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
+    "pg": "^8.16.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
